# start_A_c_cpp_project

./: CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
hello/: CMakeLists.txt  hello.cpp  hello.h  hello1.cpp  hello1.h
tests/: CMakeLists.txt  test_hello.cpp  test_world.cpp
thirdpart/googletest-1.13.0/googletest/samples/: sample10_unittest.cc
world/: CMakeLists.txt  world.cpp  world.h
